[gd_scene load_steps=12 format=3 uid="uid://boo35gntjanvi"]

[ext_resource type="Script" uid="uid://cp70mqkqykoy1" path="res://user_interface/user_interface.gd" id="1_og86u"]
[ext_resource type="Texture2D" uid="uid://ix85ha5p4nkb" path="res://textures/clean_meter_frame.png" id="1_ratyj"]
[ext_resource type="Texture2D" uid="uid://msam1ef6u464" path="res://textures/clean_meter_background.png" id="1_ur1vw"]
[ext_resource type="Texture2D" uid="uid://dj6jmvwudireg" path="res://textures/clean_meter_empty.png" id="3_ur1vw"]
[ext_resource type="PackedScene" uid="uid://cagv3t5te01h3" path="res://user_interface/unhandled_item_penalty.tscn" id="5_n3kvg"]
[ext_resource type="PackedScene" uid="uid://w2wh54wovnqs" path="res://user_interface/mishandled_item_penalty.tscn" id="6_fea8n"]
[ext_resource type="Texture2D" uid="uid://b5m73bsq1disu" path="res://textures/rage_meter_frame.png" id="7_cxjh8"]
[ext_resource type="Texture2D" uid="uid://crrjk7ghce1qp" path="res://textures/rage_meter_background.png" id="8_r6j1t"]

[sub_resource type="LabelSettings" id="LabelSettings_vy2ku"]
font_size = 66

[sub_resource type="LabelSettings" id="LabelSettings_oo55i"]
font_size = 72

[sub_resource type="LabelSettings" id="LabelSettings_n3kvg"]
font_size = 48

[node name="UserInterface" type="Control" groups=["UserInterface"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_og86u")
unhandled_item_template = ExtResource("5_n3kvg")
mishandled_item_template = ExtResource("6_fea8n")

[node name="HUD" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HUD"]
layout_mode = 2

[node name="HealthArea" type="Control" parent="HUD/VBoxContainer"]
texture_filter = 1
layout_mode = 2
mouse_filter = 1

[node name="HealthBar" type="TextureProgressBar" parent="HUD/VBoxContainer/HealthArea" groups=["HealthBar"]]
layout_mode = 0
offset_right = 100.0
offset_bottom = 40.0
scale = Vector2(3, 3)
min_value = 4.35
step = 100.0
value = 100.0
fill_mode = 1
texture_under = ExtResource("1_ur1vw")
texture_over = ExtResource("1_ratyj")
texture_progress = ExtResource("3_ur1vw")

[node name="RageMeter" type="Control" parent="HUD/VBoxContainer"]
layout_mode = 2

[node name="RageBar" type="TextureProgressBar" parent="HUD/VBoxContainer/RageMeter" groups=["RageBar"]]
layout_mode = 0
offset_top = 63.0
offset_right = 100.0
offset_bottom = 103.0
scale = Vector2(2.675, 2.675)
texture_under = ExtResource("3_ur1vw")
texture_over = ExtResource("7_cxjh8")
texture_progress = ExtResource("8_r6j1t")

[node name="ScoreContainer" type="MarginContainer" parent="HUD"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="HUD/ScoreContainer"]
layout_direction = 2
layout_mode = 2

[node name="TimerArea" type="Control" parent="HUD"]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1

[node name="TimerDisplay" type="Label" parent="HUD/TimerArea" groups=["TimerDisplay"]]
layout_direction = 2
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -342.04
offset_bottom = 91.0
grow_horizontal = 0
mouse_filter = 1
text = "3:00"
label_settings = SubResource("LabelSettings_vy2ku")
horizontal_alignment = 2

[node name="DialogArea" type="HBoxContainer" parent="." groups=["DialogArea"]]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 23.175
offset_top = -138.865
offset_right = 1227.18
offset_bottom = 161.135
grow_vertical = 0
scale = Vector2(0.42, 0.42)

[node name="GameOverScreen" type="CenterContainer" parent="." groups=["game_over_screen"]]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="GameOverScreen"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverScreen/PanelContainer"]
layout_mode = 2

[node name="GameOverLabel" type="Label" parent="GameOverScreen/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Time Up!"
label_settings = SubResource("LabelSettings_oo55i")
horizontal_alignment = 1

[node name="GameOverLabel2" type="Label" parent="GameOverScreen/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Guests have arrived"
label_settings = SubResource("LabelSettings_n3kvg")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="GameOverScreen/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Panel" type="PanelContainer" parent="GameOverScreen/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverScreen/PanelContainer/VBoxContainer/HBoxContainer/Panel"]
layout_mode = 2

[node name="LeftOutLabel" type="Label" parent="GameOverScreen/PanelContainer/VBoxContainer/HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Stuff left out:"

[node name="Clutter" type="VBoxContainer" parent="GameOverScreen/PanelContainer/VBoxContainer/HBoxContainer/Panel/VBoxContainer" groups=["clutter_vbox"]]
layout_mode = 2

[node name="Panel2" type="PanelContainer" parent="GameOverScreen/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverScreen/PanelContainer/VBoxContainer/HBoxContainer/Panel2"]
layout_mode = 2

[node name="MissplacedLabel" type="Label" parent="GameOverScreen/PanelContainer/VBoxContainer/HBoxContainer/Panel2/VBoxContainer"]
layout_mode = 2
text = "Valuables thrown out:"

[node name="Trash" type="VBoxContainer" parent="GameOverScreen/PanelContainer/VBoxContainer/HBoxContainer/Panel2/VBoxContainer" groups=["trash_vbox"]]
layout_mode = 2

[node name="FinalScoreLabel" type="Label" parent="GameOverScreen/PanelContainer/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_oo55i")
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="GameOverScreen/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RetryButton" type="Button" parent="GameOverScreen/PanelContainer/VBoxContainer/HBoxContainer2"]
process_mode = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Retry"

[node name="MainMenu" type="Button" parent="GameOverScreen/PanelContainer/VBoxContainer/HBoxContainer2"]
process_mode = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Level Select"

[connection signal="visibility_changed" from="GameOverScreen" to="." method="_on_game_over_screen_visibility_changed"]
[connection signal="pressed" from="GameOverScreen/PanelContainer/VBoxContainer/HBoxContainer2/RetryButton" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="GameOverScreen/PanelContainer/VBoxContainer/HBoxContainer2/MainMenu" to="." method="_on_main_menu_pressed"]
